# goit_first_repo-9.2025

./: README.md  main.py
additional_material/: count_digits.py  datetime.py  spam_words.py  translate.py
extra_home_work/: lesson7-8.py
goit-pycore-hw-03/: home_work_1.py  home_work_2.py  home_work_3.py  home_work_4.py
goit-pycore-hw-04/: home_work_1.py  home_work_2.py  home_work_3.py  home_work_4.py
goit-pycore-hw-04/path/to/: phone_book.txt  salary_file.txt
goit-pycore-hw-05/: home_work_1.py  home_work_2.py  home_work_3.py  home_work_4.py
goit-pycore-hw-06/: example_3.py  example_4.py  home_work.py  home_work_2.py
goit-pycore-hw-07/: home_work_1.py  home_work_2.py  home_work_3.py  task_2.txt
goit-pycore-hw-08/: home_work.py  home_work_with_styles.py  requirements.txt  test_bot.py
goit-pycore-hw-08/files/: addressbook.pkl
project-after-pycore/: .gitignore  CHECKLIST.md  HOW_TO_PUBLISH.md  LICENSE  MANIFEST.in  README.md  STORAGE_USAGE.md  TESTING.md  __init__.py  constants.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py
project-after-pycore/handlers/: __init__.py  command_handler.py  decorators.py
project-after-pycore/models/: __init__.py  address_book.py  fields.py  record.py
project-after-pycore/storage/: __init__.py  csv_storage.py  decorators.py  file_storage.py  json_storage.py  pickle_storage.py  storage_factory.py  storage_interface.py
project-after-pycore/ui/: __init__.py  styles.py  table_renderer.py
sunday_lesons/first_call/: first_task.py  second_task.py
sunday_lesons/second_call/: data.txt  first_task.py  fourth_task.py  task.py  third_task.py
sunday_lesons/third_call/: 1_task.py  2_task.py  3_task.py  4-2_task.py  4_task.py  5_task.py  6_task.py  7_task.py  cats_task.py  full_logic_warrior.py
